# Universitary-projects

./: README.md
Interactive-cloth-simulation-project/: README.md
PlanningAndReasoning-main/: README.md
PlanningAndReasoning-main/ENSHP_DEFINITIVO/: domain.pddl  instance1.pddl  instance2.pddl  instance3.pddl  plot_heuristics.py  script_heuristic.py
PlanningAndReasoning-main/INDIGOLOG/: reasoning_task1.pl  reasoning_task2.pl  reasoning_task3.pl
PlanningAndReasoning-main/PROLOG/: reasoning_task1.pl  reasoning_task2.pl  reasoning_task3.pl
RP-project-SimpleRViz/: CMakeLists.txt  README.md  frames_2025-11-21_15.12.15.gv  package.xml
RP-project-SimpleRViz/include/simple_rviz_clone/: visualizer.hpp
RP-project-SimpleRViz/install/: local_setup.sh  setup.sh
RP-project-SimpleRViz/install/simple_rviz_clone/include/simple_rviz_clone/: visualizer.hpp
RP-project-SimpleRViz/install/simple_rviz_clone/share/simple_rviz_clone/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
RP-project-SimpleRViz/install/simple_rviz_clone/share/simple_rviz_clone/cmake/: simple_rviz_cloneConfig.cmake
RP-project-SimpleRViz/log/: latest_build
RP-project-SimpleRViz/src/: mouse_test.cpp
SIW-project/: README.md
Simple-Rviz-project/src/: main.cpp  visualizer.cpp
UAV-main/: README.md
UAV-main/Disturbances/: Step.m
UAV-main/Trajectory/: Plot_trajectory.m
UAV-main/Trajectory/TRandomic/: Trajectory_generator.m
UAV-main/Trajectory/TSinusoidal/: Trajectory_generator.m
UAV-main/Trajectory/TStep/: Trajectory_Generator.m
(+31 files in other folders)
